<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driverauthentication.LoginActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeback"
            android:textSize="28sp"
            android:gravity="center"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="20dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="20dp"
            android:hint="@string/password" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            android:layout_margin="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/primary_yellow"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="20dp"/>

        <Button
            android:id="@+id/signupredirect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newusersignup"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>